# rust_soft_render

./: Cargo.toml  README.md
rust_bench/: Cargo.toml
rust_bench/benches/: color_bench.rs  vector_bench.rs
rust_learn_ray_tracing/: Cargo.toml
rust_learn_ray_tracing/src/: lib.rs  main.rs
rust_learn_ray_tracing/src/rt_lib/: cam.rs  geometry.rs  mod.rs  ray.rs  scene.rs  sphere.rs  vector3.rs
rust_learn_ray_tracing/src/rt_lib/material/: mat_dielectric.rs  mat_lambertian.rs  mat_metal.rs  mod.rs
rust_tiny_img/: Cargo.toml
rust_tiny_img/src/: color.rs  img.rs  lib.rs
rust_tiny_img/src/bmp/: bit_depth.rs  bmp_file.rs  bmp_header.rs  color_table.rs  dib_header.rs  mod.rs
tiny_bmp/: Cargo.toml
tiny_bmp/src/: color.rs  img.rs  lib.rs
tiny_bmp/src/bmp/: bit_depth.rs  bmp_file.rs  bmp_header.rs  dib_header.rs  mod.rs
tiny_bmp_bench/: Cargo.toml
tiny_bmp_bench/benches/: color2gray.rs  color_bench.rs
tiny_img_bench/: Cargo.toml
tiny_img_bench/benches/: color_bench.rs
